# screenCapture

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appicon.rc  autostartmanager.cpp  autostartmanager.h  capturehistorymanager.cpp  capturehistorymanager.h  captureresulthandler.cpp  captureresulthandler.h  capturesettingsdialog.cpp  capturesettingsdialog.h  capturesettingsdialog.ui  captureuistatecoordinator.cpp  captureuistatecoordinator.h  closedialog.cpp  closedialog.h  closedialog.ui  desktopgdicapturebackend.cpp  desktopgdicapturebackend.h  draggablehistorythumbbutton.cpp  draggablehistorythumbbutton.h  dxgiduplicationbackend.cpp  dxgiduplicationbackend.h  globalhotkeymanager.cpp  globalhotkeymanager.h  longcapturebackend.h  longcapturepreviewpanel.cpp  longcapturepreviewpanel.h  longcapturesession.cpp  longcapturesession.h  longcapturesessioncontroller.cpp  longcapturesessioncontroller.h  longcapturestitcher.cpp  (+33 more)
.VSCodeCounter/2026-03-12_14-01-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-03-15_20-40-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.codex_cmake_check_mingw/.qt/: QtDeploySupport.cmake  deploy_screenCapture_3f26f682e3.cmake  screenCapture-plugins.cmake
.codex_cmake_check_mingw/.rcc/: app_resources.qrc  qrc_app_resources.cpp
.codex_cmake_check_mingw/screenCapture_autogen/: moc_predefs.h  mocs_compilation.cpp
.codex_cmake_check_mingw/screenCapture_autogen/EWIEGA46WW/: moc_aboutdialog.cpp  moc_aboutdialog.cpp.d  moc_capturesettingsdialog.cpp  moc_capturesettingsdialog.cpp.d  moc_closedialog.cpp  moc_closedialog.cpp.d  moc_draggablehistorythumbbutton.cpp  moc_draggablehistorythumbbutton.cpp.d  moc_globalhotkeymanager.cpp  moc_globalhotkeymanager.cpp.d  moc_longcapturesessioncontroller.cpp  moc_longcapturesessioncontroller.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_pinnedimagewindow.cpp  moc_pinnedimagewindow.cpp.d  moc_selectionoverlay.cpp  moc_selectionoverlay.cpp.d  moc_showtip.cpp  moc_showtip.cpp.d
.codex_cmake_check_mingw/screenCapture_autogen/include/: ui_aboutdialog.h  ui_capturesettingsdialog.h  ui_closedialog.h  ui_mainwindow.h  ui_showtip.h
doc/: 00_project_overview.md  01_requirements.md  02_architecture.md  03_module_design.md  04_development_plan.md  05_codex_tasks.md  06_ui_design.md  07_feature_design.md  08_button_map.md  Rules.md
styles/: hyperos.qss  lightshadow_theme.qss
